# PalLink

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/: Linux.md  Windows.md
.github/workflows/: cmake-linux-debian.yml  cmake-windows.yml
include/: PalLink.hpp
include/PalLink/: Macros.hpp
scripts/: install_linux_commands.sh
source/: DllMain.cpp  Main.cpp
